# edTech_project

./: Dockerfile  docker-compose.yaml  nginx.conf  pyproject.toml
backend/src/: db.sqlite3
backend/src/app/: models.py
backend/src/app/migrations/: 0001_initial.py
backend/src/src/: settings.py  urls.py
backend/src/users/: admin.py  models.py  urls.py  views.py
backend/src/users/migrations/: 0001_initial.py  0002_customuser_groups_customuser_user_permissions.py  0003_customuser_student_password.py
frontend/: package-lock.json
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/pages/: AuthPage.vue  MainPage.vue  ProfilPage.vue
frontend/src/router/: index.js
