[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["nariman079 <nariman079i@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework-simplejwt = "^5.3.1"
django = "^5.1.4"
django-cors-headers = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
